repo: added readme and license
